--- a/src/FinanceManagement.API/Properties/launchSettings.json
+++ b/src/FinanceManagement.API/Properties/launchSettings.json
@@ -4,7 +4,8 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "JWT_SECRET": "ThisIsMySuperSecretKeyForDevelopment_12345"
       },
       "applicationUrl": "https://localhost:62843;http://localhost:62844"
     }
