Revert "Updated changes after collaborator access"
This reverts commit 6c64984f745dab7da791e12a33b7f8790fbde7d6.

--- a/src/FinanceManagement.API/Properties/launchSettings.json
+++ b/src/FinanceManagement.API/Properties/launchSettings.json
@@ -4,8 +4,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "JWT_SECRET": "ThisIsMySuperSecretKeyForDevelopment_12345"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "https://localhost:62843;http://localhost:62844"
     }
